# grepctl

./: .gitignore  .pypirc.example  CLAUDE.md  FIXES_APPLIED.md  GREPCTL_SEARCH_GUIDE.md  IMAGE_SUPPORT.md  Makefile  PACKAGE_DECISION.md  PDF_SUPPORT.md  PYTHON_INTERFACE.md  README.md  SQL_INTERFACE.md  TODO.md  _config.yml  create_diagram_png.py  debug_ingest.py  enable_gemini_models.py  grepctl.py  grepctl_README.md  ingest_json_csv.py  ingest_json_csv_simple.py  list_foundation_models.py  plan.md  pyproject.toml  setup_mmgrep.py  show_status.py  test_all_models.py  test_bq_gemini_pdf.py  test_gcs_upload.py  test_gemini_access.py  test_ml_generate.py  test_models.py  test_search_api.py  test_steps.md  test_vertex_ai_setup.py  update_all_images_vision.py  visualize_architecture_text.py  visualize_init_command.py  writeup.md
.github/workflows/: publish.yml
config/: ui_theme.yaml
diagrams/: setup_mmgrep.sh  test_gemini_pdf.py  visualize_architecture.py  visualize_data_pipeline.py
docs/: CNAME  FIX_INSTRUCTIONS.md  PUBLISHING.md  PYPI_QUICKSTART.md  SETUP_COMPLETE.md  SETUP_SUCCESS.md  VISION_API_SUCCESS.md  grepctl_technical_paper.md  index.html  lessons_learned.md  specs.md
obsolete/: check_gemini.py  complete_vision_analysis.py  create_gemini_pdf_model.py  download_upload_resources.py  large_data_collector.py  multimodal_data_collector.py  simple_data_collector.py  update_images_with_vision.py
src/bq_semgrep/: __init__.py
src/bq_semgrep/scripts/: extract_all_pdfs_hybrid.py  extract_pdfs_with_docai.py  fix_embeddings.py  ingest_audio_files.py  ingest_json_csv_fixed.py  ingest_video_files.py
src/grepctl/: cli.py  config.py
src/grepctl.egg-info/: PKG-INFO  SOURCES.txt
src/grepctl/bigquery/: queries.py  schema.py  search_function.sql
src/grepctl/ingestion/: audio_processor.py  text_extractor.py  video_processor.py
tools/: publish.py  setup_package.py  setup_vertex_ai.sh  upload.sh  upload_pypi.sh
web/: .gitignore  README.md  index.html  package.json  vite.config.ts
web/src/: App.tsx
web/src/components/: BrandingHeader.tsx  FilterPanel.tsx  SearchBar.tsx  SearchResults.tsx  StatusBar.tsx
web/src/config/: theme.config.json
web/src/contexts/: ThemeContext.tsx
(+5 files in other folders)
