[project]
name = "bq-semgrep"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Gregory Mulla", email = "gregory.cr.mulla@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "arxiv>=2.2.0",
    "datasets>=4.0.0",
    "google-cloud-storage>=3.3.1",
    "imageio>=2.37.0",
    "imageio-ffmpeg>=0.6.0",
    "rich>=14.1.0",
    "tensorflow-datasets>=4.9.9",
    "tqdm>=4.67.1",
    "yt-dlp>=2025.9.5",
]

[project.scripts]
bq-semgrep = "bq_semgrep:main"

[build-system]
requires = ["uv_build>=0.8.3,<0.9.0"]
build-backend = "uv_build"
