[project]
name = "bq-semgrep"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Gregory Mulla", email = "gregory.cr.mulla@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "arxiv>=2.2.0",
    "click>=8.2.1",
    "datasets>=4.0.0",
    "google-cloud-aiplatform>=1.113.0",
    "google-cloud-bigquery>=3.37.0",
    "google-cloud-documentai>=3.6.0",
    "google-cloud-speech>=2.33.0",
    "google-cloud-videointelligence>=2.16.2",
    "google-cloud-vision>=3.10.2",
    "graphviz>=0.20.3",
    "imageio>=2.37.0",
    "imageio-ffmpeg>=0.6.0",
    "matplotlib>=3.10.6",
    "pypdf2>=3.0.1",
    "pyyaml>=6.0.2",
    "rich>=14.1.0",
    "tensorflow-datasets>=4.9.9",
    "tqdm>=4.67.1",
    "yt-dlp>=2025.9.5",
]

[project.scripts]
bq-semgrep = "bq_semgrep:main"

[build-system]
requires = ["uv_build>=0.8.3,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "diagrams>=0.24.4",
]
